# scaleway-mcp

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: client.rs  error.rs  main.rs  models.rs  tools.rs
src/endpoint/: api_instance_image.rs  api_instance_security_group.rs  api_instance_server.rs  mod.rs
