[package]
name = "scaleway-mcp"
version = "0.1.0-alpha"
edition = "2024"


[dependencies]

tokio = { version = "1.45", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal"
] }

reqwest = { version = "0.12", features = [
    "blocking",
    "json"
] }

serde = { version = "1.0", features = [
    "derive"
] }

serde_json = "1.0"

thiserror = "2"

rmcp = { version = "0.1", features = [
    "server",
    "transport-io"
] }

anyhow = "1"

tracing = "0.1"

tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }

dotenvy = "0.15"
